Added support to Java 8 runtime.